Bug 159336 - PDF export: multiline text is exported as one line
Summary: PDF export: multiline text is exported as one line
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1 all versions
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.8.0 target:24.2.1 target:7.6.5
Keywords: bibisected, bisected, regression
: 159012 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-01-23 11:12 UTC by Xisco Faulí
Modified: 2024-01-29 10:48 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2024-01-23 11:12:39 UTC
Steps to reproduce:
1. Open attachment 99947 [details] from bug 79313
2. Export it to PDF
3. Open the file

-> The text is displayed in one line

Reproduced in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ef6083200a4f28e43198c7a0878da6f4b880725f
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2024-01-23 11:13:15 UTC
Regression introduced by:

author	Jaume Pujantell <jaume.pujantell@collabora.com>	2023-09-13 08:58:21 +0200
committer	Jaume Pujantell <jaume.pujantell@collabora.com>	2023-10-11 15:19:58 +0200
commit 5082d50d24c3fec4487c724a15eb0d54a82ecd0d (patch)
tree 8cae9bc61647c7ba87b53c28d8d4e11269c0fe2c
parent af9c3ed6f748781f2a77e676ffe740992788969b (diff)
writerfilter: use content controls for text in block SDTs

Bisected with: bibisect-linux64-24.2
Comment 2 Xisco Faulí 2024-01-23 14:28:19 UTC
*** Bug 159012 has been marked as a duplicate of this bug. ***
Comment 3 Xisco Faulí 2024-01-24 11:22:30 UTC
Actually this is not a regression from 5082d50d24c3fec4487c724a15eb0d54a82ecd0d "writerfilter: use content controls for text in block SDTs" but it just became more visible after this commit.

How to reproduce it from scratch:
1. Open writer
2. Form - Content Controls - Rich Text/Plain Text
3. Split the control intro different lines
4. Export to PDF

-> The content control is displayed in one line
Comment 4 Commit Notification 2024-01-24 14:41:10 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/863a4cde77a5045d44b1da583f00c0a72762f19a

tdf#159336: export EditWidget with multiline enabled

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-01-25 10:43:21 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/c2032ed42ea8a44bd3a5f8e8a778e05005366099

tdf#159336: export EditWidget with multiline enabled

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-01-29 10:48:53 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/22db6d7a8b1638550a53af57c7c832c3fff230e2

tdf#159336: export EditWidget with multiline enabled

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.