tdf#159336: export EditWidget with multiline enabled

How to reproduce it from scratch:
1. Open writer
2. Form - Content Controls - Rich Text/Plain Text
3. Split the control intro different lines
4. Export to PDF

-> The content control is displayed in one line

Change-Id: Ia8666c8a6520e94ae06693ea8767c1d79aa5d3a0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162446
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Tested-by: Jenkins
(cherry picked from commit 8a6c9e246c746792fa0ab9d47a0fd5928b77d91d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162532
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>